--- a/csscheatsheet/css/styles.css
+++ b/csscheatsheet/css/styles.css
@@ -1,4 +1,116 @@
 
-h1 {
+/* asterix means every element and every style
+    also known as a reset */
+/* * {
+    margin: 0;
+    padding: 0;
+} */
+
+body {
+    background-color: #f4f4f4;
+    color: #555555;
+
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 16px;
+    font-weight: normal;
+    /* same as above */
+    font: normal 16px courier, monospace;
+
+    line-height: 1.2em;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+a:hover {
+    color: red;
+}
+
+a:active {
     color: green;
 }
+/* lets the uset know they have already clicked that link
+at some point during their visit, not often used. */
+/* a:visited {
+    color: brown;
+} */
+
+.container {
+    width: 80%;
+    margin: auto;
+}
+
+.box-1 {
+    background-color: #333;
+    color: #fff;
+
+    border-right: 5px red solid;
+    border-left: 5px red solid;
+    border-top: 5px red solid;
+    border-bottom: 5px red solid;
+    /* same as above */
+    border: 5px red solid;
+
+    /* some extra control */
+    border-width: 3px;
+    border-bottom-width: 10px;
+    border-top-style: dotted;
+
+    /*this is just to make it look the same as the tutorial
+    without me having to mess up what I've done*/
+    border: 5px red solid;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+
+    /* same as above */
+    padding: 20px;
+
+    margin-top: 20px;
+    margin: 20px 0; /*top/bottom - left/right*/
+}
+
+.box-1 h1 {
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 800;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    word-spacing: 1em;
+}
+
+.box-2 {
+    border: 3px dotted #ccc;
+    padding: 20px;
+    margin: 20px 0;
+}
+
+.categories {
+    border: 1px #333 solid;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+.categories h2 {
+    text-align: center;
+}
+
+.categories ul {
+    padding: 0;
+    padding-left: 20px;
+    list-style: square;
+    list-style: none;
+}
+
+.categories li {
+    padding-bottom: 6px;
+    border-bottom: dotted 1px #333;
+    list-style-image: url('../images/check.png');
+}
+
