--- a/csscheatsheet/css/styles.css
+++ b/csscheatsheet/css/styles.css
@@ -43,6 +43,23 @@ at some point during their visit, not often used. */
     margin: auto;
 }
 
+.button {
+    background-color: #333;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 8px;
+}
+
+.button:hover {
+    background: red;
+    color: #fff;
+}
+
+.clr {
+    clear:both;
+}
+
 .box-1 {
     background-color: #333;
     color: #fff;
@@ -114,3 +131,51 @@ at some point during their visit, not often used. */
     list-style-image: url('../images/check.png');
 }
 
+.my-form {
+    padding: 20px;
+}
+
+.my-form .form-group {
+    padding-bottom: 15px;
+}
+
+.my-form label {
+    display: block;
+}
+
+.my-form input[type="text"], .my-form textarea {
+    padding: 8px;
+    width: 100%;
+}
+
+.button {
+    background-color: #333;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 8px;
+}
+
+.block {
+    float: left;
+    width: 33.3%;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#main-block {
+    float:left;
+    width: 70%;
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+#sidebar {
+    float: right;
+    width: 30%;
+    background-color: #333;
+    color: white;
+    padding: 15px;
+    box-sizing: border-box;
+}
